--- a/hotels.html
+++ b/hotels.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"/>
+  </head>
 <body>
 <script type="text/javascript" >var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "2f92f6eb9618197935112e11f9af1bf68edad8f1a9f2ba5fb643f1d9539bd14618a75ce9952b443684cc8c8983f4968a", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.in/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");</script>
 
@@ -311,14 +314,6 @@
     </span>
   </div>
 </footer>
-  <style>
-@media only screen and (max-width: 400px) and (min-width: 50px)
-{
-.siqembed[embedtheme], .siqembed[embedtheme] iframe 
-{
-height:90% !important;
-}
-}
-</style>
+
 </body>
 </html>
