--- a/hotels.html
+++ b/hotels.html
@@ -199,7 +199,7 @@ height:50% !important;
     <div class="flex flex-wrap -m-4">
       <div class="p-4 lg:w-1/2">
         <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
-          <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://github.com/Tejas0125/mumbai5656.github.io/blob/master/Png/businessman-avatar-profile-vector-2693911911.jpg">
+          <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://raw.githubusercontent.com/Tejas0125/mumbai5656.github.io/master/Png/businessman-avatar-profile-vector-2693911911.jpg">
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">Tejas Solanki</h2>
             <h3 class="text-gray-500 mb-3">Human Resources</h3>
