--- a/hotels.html
+++ b/hotels.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>TravelTrot</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"/>
   </head>
 <body>
@@ -13,7 +14,7 @@ height:50% !important;
 }
 }
 </style>
-  
+ 
 <header class="text-gray-600 body-font">
 <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
