--- a/hotels.html
+++ b/hotels.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>TravelTrot</title>
+    <link rel="shortcut icon" type="image/jpg" href="https://raw.githubusercontent.com/Tejas0125/mumbai5656.github.io/master/Png/globe.png"/>
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"/>
   </head>
 <body>
