--- a/hotels.html
+++ b/hotels.html
@@ -20,6 +20,10 @@ height:50% !important;
 <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+      
+       <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" src="https://raw.githubusercontent.com/Tejas0125/mumbai5656.github.io/master/Png/globe.png">
+        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+      </svg>
      
       <span class="ml-3 text-xl">TravelTrot</span>
     </a>
