--- a/hotels.html
+++ b/hotels.html
@@ -21,7 +21,7 @@ height:50% !important;
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
       
-       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="https://tejas0125.github.io/mumbai5656.github.io/hotels.html">
+       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="https://tejas0125.github.io/mumbai5656.github.io/hotels.html/40*40">
                <img alt=""  src="https://raw.githubusercontent.com/Tejas0125/mumbai5656.github.io/master/Png/globe.png">
               <span class="ml-3 text-xl">TravelTrot</span>
              </a>
