--- a/hotels.html
+++ b/hotels.html
@@ -22,7 +22,7 @@ height:50% !important;
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
       
        <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="https://tejas0125.github.io/mumbai5656.github.io/hotels.html/40*40">
-               <img alt=""  src="https://raw.githubusercontent.com/Tejas0125/mumbai5656.github.io/master/Png/globe.png">
+               <img alt=""  src="https://raw.githubusercontent.com/Tejas0125/mumbai5656.github.io/master/Png/globe.jpg">
               <span class="ml-3 text-xl">TravelTrot</span>
              </a>
      
