--- a/hotels.html
+++ b/hotels.html
@@ -319,10 +319,14 @@ height:50% !important;
         </svg>
       </a>
       <a class="ml-3 text-gray-500">
-        <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+        <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="https://tejas0125.github.io/mumbai5656.github.io/hotels.html">
+               <img alt=""  src="https://raw.githubusercontent.com/Tejas0125/mumbai5656.github.io/master/Png/globe.jpg">
+              <span class="ml-3 text-xl">TravelTrot</span>
+             </a>
+<!--         <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
           <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
           <circle cx="4" cy="4" r="2" stroke="none"></circle>
-        </svg>
+        </svg> -->
       </a>
     </span>
   </div>
