--- a/dubai.html
+++ b/dubai.html
@@ -5,8 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"/>
   </head>
 <body>
-<script type="text/javascript" >var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "2f92f6eb9618197935112e11f9af1bf68edad8f1a9f2ba5fb643f1d9539bd14618a75ce9952b443684cc8c8983f4968a", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.in/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");</script>
-<style>
+  <script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "7b24184c23801dd83e1da4e1462b628e8c05f1631e9e7330d8e647894c7504f1", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.in/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
 @media only screen and (max-width: 100px) and (min-width: 50px)
 {
 .siqembed[embedtheme], .siqembed[embedtheme] iframe 
