--- a/dubai.html
+++ b/dubai.html
@@ -6,7 +6,9 @@
   </head>
 <body>
   <script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "7b24184c23801dd83e1da4e1462b628e8c05f1631e9e7330d8e647894c7504f1", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.in/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
-@media only screen and (max-width: 100px) and (min-width: 50px)
+
+  <style>
+  @media only screen and (max-width: 100px) and (min-width: 50px)
 {
 .siqembed[embedtheme], .siqembed[embedtheme] iframe 
 {
