--- a/VitthalTeedi.html
+++ b/VitthalTeedi.html
@@ -1,5 +1,7 @@
-<video width="320" height="240" controls>
+<!-- <video width="320" height="240" controls>
   <source src="https://drive.google.com/file/d/1mPYJUCH4wonJjqBudqb74wOc1rGP5zkK/view?usp=sharing" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
-</video>
+</video> -->
+
+<iframe src="https://drive.google.com/file/d/1mPYJUCH4wonJjqBudqb74wOc1rGP5zkK/preview" width="640" height="480"></iframe>
